fix off center title 5 day forecast

--- a/lesson-11/css/large11.css
+++ b/lesson-11/css/large11.css
@@ -67,7 +67,6 @@
     .noshow, noshow1 {                
         display: block;
         margin: .5rem;
-        padding-left: 20%;
     }
     iframe {
         width: 20em;
